--- a/sifma.beta/Views/master.cshtml
+++ b/sifma.beta/Views/master.cshtml
@@ -13,6 +13,7 @@
     <!-- Google fonts-->
     <link rel="stylesheet preconnect" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&display=swap">
     <link rel="stylesheet preconnect" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Financier+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/clean-assets/css/styles.css" rel="stylesheet" asp-append-version="true" />
     <link href="/clean-assets/css/vs2015.css" rel="stylesheet" asp-append-version="true" />
